[package]
name = "ffp"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rapidfuzz = "0.5"
notify-rust = "4"
dirs = "6.0.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "parsing"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
